--- a/index.html
+++ b/index.html
@@ -10,154 +10,274 @@
     <!-- Шапка сайта -->
     <header>
       <nav>
-        <a href="">
-          <h2>Web Studio</h2>
-        </a>
-        <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <a href="./index.html" class="logo-head"
+          ><span class="blue">Web</span>Studio</a
+        >
+        <ul class="site-nav list">
+          <li><a href="./index.html" class="link current">Студия</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+3800961111111">+3800961111111</a></li>
+      <ul class="header-contacts list">
+        <li>
+          <a href="mailto:info@devstudio.com" class="link"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li><a href="tel:+3800961111111" class="link">+3800961111111</a></li>
       </ul>
     </header>
 
     <!-- Основной контент страницы -->
     <main>
       <!-- Приветствие компании -->
-      <section>
-        <h1>
+      <section class="hero">
+        <h1 class="title">
           Эффективные решения <br />
           для вашего бизнеса
         </h1>
-        <!-- Будущая кнопка -->
-        <a href="">Заказать услугу</a>
+
+        <a href="" class="button-link">Заказать услугу</a>
       </section>
       <!-- какие-то приемущества -->
-      <section>
+      <section class="features">
         <!-- Скрытый заголовок -->
         <h2>Мы лучший выбор</h2>
         <!-- Список преимуществ компании -->
         <ul>
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>
+            <h3 class="title">Внимание к деталям</h3>
+            <p class="details">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="title">Пунктуальность</h3>
+            <p class="details">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="title">Планирование</h3>
+            <p class="details">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>
+            <h3 class="title">Современные технологии</h3>
+            <p class="details">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
           </li>
         </ul>
       </section>
-      <section>
+      <section class="examples">
         <h2>Чем мы занимаемся</h2>
         <!-- Список ссылок(в картинках с описанием) на проекты  -->
-        <ul>
+        <ul class="list">
           <li>
             <img src="./images/img1.jpg" alt="Ноутбук" />
-            <h3>Десктопные приложения</h3>
+            <h3 class="title">Десктопные приложения</h3>
           </li>
           <li>
             <img src="./images/img2.jpg" alt="Смартфон" />
-            <h3>Мобильные приложения</h3>
+            <h3 class="title">Мобильные приложения</h3>
           </li>
           <li>
             <img src="./images/img3.jpg" alt="Монитор" />
-            <h3>Дизайнерские решения</h3>
+            <h3 class="title">Дизайнерские решения</h3>
           </li>
         </ul>
       </section>
-      <section>
+      <section class="team">
         <h2>Наша команда</h2>
         <!-- Список лиц членов нашей команды -->
-        <ul>
+        <ul class="list">
           <li>
             <img src="./images/face1.jpg" alt="Лицо человека1" />
-            <h3>Николай Кучеренко</h3>
-            <p>Product Designer</p>
+            <h3 class="name">Николай Кучеренко</h3>
+            <p class="rank">Product Designer</p>
+            <ul class="list">
+              <li>
+                <a href="" aria-label="Ссылка на Instagram" class="link"
+                  >Instagram</a
+                >
+              </li>
+              <li>
+                <a href="" aria-label="Ссылка на Twitter" class="link"
+                  >Twitter</a
+                >
+              </li>
+              <li>
+                <a href="" aria-label="Ссылка на Facebook" class="link"
+                  >Facebook</a
+                >
+              </li>
+              <li>
+                <a href="" aria-label="Ссылка на LinkedIn" class="link"
+                  >LinkedIn</a
+                >
+              </li>
+            </ul>
           </li>
           <li>
             <img src="./images/face2.jpg" alt="Лицо человека2" />
-            <h3>Ольга Иванова</h3>
-            <p>Frontend Developer</p>
+            <h3 class="name">Ольга Иванова</h3>
+            <p class="rank">Frontend Developer</p>
+            <ul class="list">
+              <li>
+                <a href="" aria-label="Ссылка на Instagram" class="link"
+                  >Instagram</a
+                >
+              </li>
+              <li>
+                <a href="" aria-label="Ссылка на Twitter" class="link"
+                  >Twitter</a
+                >
+              </li>
+              <li>
+                <a href="" aria-label="Ссылка на Facebook" class="link"
+                  >Facebook</a
+                >
+              </li>
+              <li>
+                <a href="" aria-label="Ссылка на LinkedIn" class="link"
+                  >LinkedIn</a
+                >
+              </li>
+            </ul>
           </li>
           <li>
             <img src="./images/face3.jpg" alt="Лицо человека3" />
-            <h3>Андрей Шевченко</h3>
-            <p>Marketing</p>
+            <h3 class="name">Андрей Шевченко</h3>
+            <p class="rank">Marketing</p>
+            <ul class="list">
+              <li>
+                <a href="" aria-label="Ссылка на Instagram" class="link"
+                  >Instagram</a
+                >
+              </li>
+              <li>
+                <a href="" aria-label="Ссылка на Twitter" class="link"
+                  >Twitter</a
+                >
+              </li>
+              <li>
+                <a href="" aria-label="Ссылка на Facebook" class="link"
+                  >Facebook</a
+                >
+              </li>
+              <li>
+                <a href="" aria-label="Ссылка на LinkedIn" class="link"
+                  >LinkedIn</a
+                >
+              </li>
+            </ul>
           </li>
           <li>
             <img src="./images/face4.jpg" alt="Лицо человека4" />
-            <h3>Иван Николаев</h3>
-            <p>UI Designer</p>
+            <h3 class="name">Иван Николаев</h3>
+            <p class="rank">UI Designer</p>
+            <ul class="list">
+              <li>
+                <a href="" aria-label="Ссылка на Instagram" class="link"
+                  >Instagram</a
+                >
+              </li>
+              <li>
+                <a href="" aria-label="Ссылка на Twitter" class="link"
+                  >Twitter</a
+                >
+              </li>
+              <li>
+                <a href="" aria-label="Ссылка на Facebook" class="link"
+                  >Facebook</a
+                >
+              </li>
+              <li>
+                <a href="" aria-label="Ссылка на LinkedIn" class="link"
+                  >LinkedIn</a
+                >
+              </li>
+            </ul>
           </li>
         </ul>
       </section>
       <!-- Секция в которой студия хвастается :D -->
-      <section>
+      <section class="partners">
         <h2>Постоянные клиенты</h2>
-        <ul>
-          <li><a href="">ya n co</a></li>
-          <li><a href="">company</a></li>
-          <li><a href="">company</a></li>
-          <li><a href="">foster peters</a></li>
-          <li><a href="">brand</a></li>
-          <li><a href="">company</a></li>
+        <ul class="list">
+          <li>
+            <a href=""> <img src="./icons/logo1.svg" alt="YA & CO" /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="./icons/logo2.svg" alt="Company TAG LINE Here"
+            /></a>
+          </li>
+          <li>
+            <a href=""><img src="./icons/logo3.svg" alt="Company" /></a>
+          </li>
+          <li>
+            <a href=""><img src="./icons/logo4.svg" alt="Foster Peters" /></a>
+          </li>
+          <li>
+            <a href=""><img src="./icons/logo5.svg" alt="Brand" /></a>
+          </li>
+          <li>
+            <a href=""
+              ><img src="./icons/logo6.svg" alt="Company TAG LINE"
+            /></a>
+          </li>
         </ul>
       </section>
     </main>
 
     <!-- Футер -->
     <footer>
-      <a href=""><h2>Web Studio</h2></a>
-      <address>
+      <a href="./index.html" class="logo-foot"
+        ><span class="blue">Web</span> Studio</a
+      >
+      <address class="address">
         г. Одесса, <br />
         проспект Гагарина, 12-А, <br />
         4й этаж офис 404
       </address>
-      <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+3800961111111">+3800961111111</a>
+      <address class="footer-contacts">
+        <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+        <a href="tel:+3800961111111" class="link">+3800961111111</a>
       </address>
       <!-- Зазывающий подписаться список ссылок -->
-      <section>
-        <h2>присоединяйтесь</h2>
-        <ul>
-          <li><a href="" aria-label="Ссылка на Instagram">Instagram</a></li>
-          <li><a href="" aria-label="Ссылка на Twitter">Twitter</a></li>
-          <li><a href="" aria-label="Ссылка на Facebook">Facebook</a></li>
-          <li><a href="" aria-label="Ссылка на LinkedIn">LinkedIn</a></li>
+      <section class="footer-section">
+        <b class="title">присоединяйтесь</b>
+        <ul class="list">
+          <li>
+            <a href="" aria-label="Ссылка на Instagram" class="link"
+              >Instagram</a
+            >
+          </li>
+          <li>
+            <a href="" aria-label="Ссылка на Twitter" class="link">Twitter</a>
+          </li>
+          <li>
+            <a href="" aria-label="Ссылка на Facebook" class="link">Facebook</a>
+          </li>
+          <li>
+            <a href="" aria-label="Ссылка на LinkedIn" class="link">LinkedIn</a>
+          </li>
         </ul>
       </section>
       <!-- Секция зазывающая и помогающая сразу подписаться на рассылку -->
-      <section>
-        <h2>Подпишитесь на рассылку</h2>
-        <textarea name="e-mail" id="e-mail-area" cols="30" rows="1"></textarea>
+      <section class="footer-section">
+        <b class="title">Подпишитесь на рассылку</b>
+        <!-- <textarea name="e-mail" id="e-mail-area" cols="30" rows="1"></textarea> -->
         <!-- Будущая кнопка -->
-        <a href="">Подписаться</a>
+        <a href="" class="button-link">Подписаться</a>
       </section>
     </footer>
   </body>
