--- a/portfolio.html
+++ b/portfolio.html
@@ -6,5 +6,76 @@
     <title>Портфолио</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- Шапка сайта -->
+    <header>
+      <nav>
+        <a href="./index.html" class="logo-head"
+          ><span class="blue">Web</span>Studio</a
+        >
+        <ul class="site-nav list">
+          <li><a href="./index.html" class="link current">Студия</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="" class="link">Контакты</a></li>
+        </ul>
+      </nav>
+      <ul class="header-contacts list">
+        <li>
+          <a href="mailto:info@devstudio.com" class="link"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li><a href="tel:+3800961111111" class="link">+3800961111111</a></li>
+      </ul>
+    </header>
+    <!-- Главный контент странички -->
+    <main>
+      <section>
+        <h1>Портфолио</h1>
+      </section>
+    </main>
+
+    <!-- Футер -->
+    <footer>
+      <a href="./index.html" class="logo-foot"
+        ><span class="blue">Web</span> Studio</a
+      >
+      <address class="address">
+        г. Одесса, <br />
+        проспект Гагарина, 12-А, <br />
+        4й этаж офис 404
+      </address>
+      <address class="footer-contacts">
+        <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+        <a href="tel:+3800961111111" class="link">+3800961111111</a>
+      </address>
+      <!-- Зазывающий подписаться список ссылок -->
+      <section class="footer-section">
+        <b class="title">присоединяйтесь</b>
+        <ul class="list">
+          <li>
+            <a href="" aria-label="Ссылка на Instagram" class="link"
+              >Instagram</a
+            >
+          </li>
+          <li>
+            <a href="" aria-label="Ссылка на Twitter" class="link">Twitter</a>
+          </li>
+          <li>
+            <a href="" aria-label="Ссылка на Facebook" class="link">Facebook</a>
+          </li>
+          <li>
+            <a href="" aria-label="Ссылка на LinkedIn" class="link">LinkedIn</a>
+          </li>
+        </ul>
+      </section>
+      <!-- Секция зазывающая и помогающая сразу подписаться на рассылку -->
+      <section class="footer-section">
+        <b class="title">Подпишитесь на рассылку</b>
+        <!-- <textarea name="e-mail" id="e-mail-area" cols="30" rows="1"></textarea> -->
+        <!-- Будущая кнопка -->
+        <a href="" class="button-link">Подписаться</a>
+      </section>
+    </footer>
+  </body>
 </html>
