Добавляет разметку страницы Портфолио

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           для вашего бизнеса
         </h1>
 
-        <a href="" class="button-link">Заказать услугу</a>
+        <button class="button-blue">Заказать услугу</button>
       </section>
       <!-- какие-то приемущества -->
       <section class="features">
@@ -277,7 +277,7 @@
         <b class="title">Подпишитесь на рассылку</b>
         <!-- <textarea name="e-mail" id="e-mail-area" cols="30" rows="1"></textarea> -->
         <!-- Будущая кнопка -->
-        <a href="" class="button-link">Подписаться</a>
+        <button class="button-blue">Подписаться</button>
       </section>
     </footer>
   </body>
