--- a/portfolio.html
+++ b/portfolio.html
@@ -14,8 +14,8 @@
           ><span class="blue">Web</span>Studio</a
         >
         <ul class="site-nav list">
-          <li><a href="./index.html" class="link current">Студия</a></li>
-          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="./index.html" class="link">Студия</a></li>
+          <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
           <li><a href="" class="link">Контакты</a></li>
         </ul>
       </nav>
@@ -30,8 +30,62 @@
     </header>
     <!-- Главный контент странички -->
     <main>
-      <section>
+      <section class="portfolio">
         <h1>Портфолио</h1>
+        <ul class="list">
+          <li><button>Все</button></li>
+          <li><button>Веб-сайты</button></li>
+          <li><button>Приложения</button></li>
+          <li><button>Дизайн</button></li>
+          <li><button>Маркетинг</button></li>
+        </ul>
+        <ul class="list">
+          <li>
+            <img src="./images/example1.jpg" alt="Ноутбук" />
+            <h2>Технокряк</h2>
+            <p class="category-mark">Веб-сайт</p>
+          </li>
+          <li>
+            <img src="./images/example2.jpg" alt="Баскетбол" />
+            <h2>Постер New Orlean vs Golden Star</h2>
+            <p class="category-mark">Дизайн</p>
+          </li>
+          <li>
+            <img src="./images/example3.jpg" alt="Ресторан Морской Кухни" />
+            <h2>Ресторан Seafood</h2>
+            <p class="category-mark">Приложение</p>
+          </li>
+          <li>
+            <img src="./images/example4.jpg" alt="Наушники" />
+            <h2>Проект Prime</h2>
+            <p class="category-mark">Маркетинг</p>
+          </li>
+          <li>
+            <img src="./images/example5.jpg" alt="Две Коробки" />
+            <h2>Проект Boxes</h2>
+            <p class="category-mark">Приложение</p>
+          </li>
+          <li>
+            <img src="./images/example6.jpg" alt="Монитор" />
+            <h2>Inspiration has no Borders</h2>
+            <p class="category-mark">Веб-сайт</p>
+          </li>
+          <li>
+            <img src="./images/example7.jpg" alt="Журнал" />
+            <h2>Издание Limited Edition</h2>
+            <p class="category-mark">Дизайн</p>
+          </li>
+          <li>
+            <img src="./images/example8.jpg" alt="Лэйбл" />
+            <h2>Проект LAB</h2>
+            <p class="category-mark">Маркетинг</p>
+          </li>
+          <li>
+            <img src="./images/example9.jpg" alt="Ноутбук на столе" />
+            <h2>Growing Business</h2>
+            <p class="category-mark">Приложение</p>
+          </li>
+        </ul>
       </section>
     </main>
 
@@ -46,7 +100,8 @@
         4й этаж офис 404
       </address>
       <address class="footer-contacts">
-        <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+        <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a
+        ><br />
         <a href="tel:+3800961111111" class="link">+3800961111111</a>
       </address>
       <!-- Зазывающий подписаться список ссылок -->
@@ -74,7 +129,7 @@
         <b class="title">Подпишитесь на рассылку</b>
         <!-- <textarea name="e-mail" id="e-mail-area" cols="30" rows="1"></textarea> -->
         <!-- Будущая кнопка -->
-        <a href="" class="button-link">Подписаться</a>
+        <button class="button-blue">Подписаться</button>
       </section>
     </footer>
   </body>
