--- a/portfolio.html
+++ b/portfolio.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфолио</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Шапка сайта -->
+
     <header>
       <nav>
         <a href="./index.html" class="logo-head"
@@ -28,68 +33,187 @@
         <li><a href="tel:+3800961111111" class="link">+3800961111111</a></li>
       </ul>
     </header>
+
     <!-- Главный контент странички -->
+
     <main>
       <section class="portfolio">
+        <!-- Этот заголовок будет скрыт -->
+
         <h1>Портфолио</h1>
+
+        <!-- Кнопки выбора категорий -->
+
         <ul class="list">
-          <li><button>Все</button></li>
-          <li><button>Веб-сайты</button></li>
-          <li><button>Приложения</button></li>
-          <li><button>Дизайн</button></li>
-          <li><button>Маркетинг</button></li>
+          <li><button class="button active">Все</button></li>
+          <li><button class="button">Веб-сайты</button></li>
+          <li><button class="button">Приложения</button></li>
+          <li><button class="button">Дизайн</button></li>
+          <li><button class="button">Маркетинг</button></li>
         </ul>
+
+        <!-- Список проектов -->
+
         <ul class="list">
           <li>
-            <img src="./images/example1.jpg" alt="Ноутбук" />
-            <h2>Технокряк</h2>
-            <p class="category-mark">Веб-сайт</p>
+            <a href="" class="link">
+              <img
+                src="./images/example1.jpg"
+                alt="Ноутбук"
+                width="370px"
+                height="294px"
+              />
+              <h2 class="title">Технокряк</h2>
+              <p class="category-tag">Веб-сайт</p>
+              <p class="description">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
           </li>
           <li>
-            <img src="./images/example2.jpg" alt="Баскетбол" />
-            <h2>Постер New Orlean vs Golden Star</h2>
-            <p class="category-mark">Дизайн</p>
+            <a href="" class="link">
+              <img
+                src="./images/example2.jpg"
+                alt="Баскетбол"
+                width="370px"
+                height="294px"
+              />
+              <h2 class="title">Постер New Orlean vs Golden Star</h2>
+              <p class="category-tag">Дизайн</p>
+              <p class="description">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
           </li>
           <li>
-            <img src="./images/example3.jpg" alt="Ресторан Морской Кухни" />
-            <h2>Ресторан Seafood</h2>
-            <p class="category-mark">Приложение</p>
+            <a href="" class="link">
+              <img
+                src="./images/example3.jpg"
+                alt="Ресторан Морской Кухни"
+                width="370px"
+                height="294px"
+              />
+              <h2 class="title">Ресторан Seafood</h2>
+              <p class="category-tag">Приложение</p>
+              <p class="description">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
           </li>
           <li>
-            <img src="./images/example4.jpg" alt="Наушники" />
-            <h2>Проект Prime</h2>
-            <p class="category-mark">Маркетинг</p>
+            <a href="" class="link">
+              <img
+                src="./images/example4.jpg"
+                alt="Наушники"
+                width="370px"
+                height="294px"
+              />
+              <h2 class="title">Проект Prime</h2>
+              <p class="category-tag">Маркетинг</p>
+              <p class="description">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
           </li>
           <li>
-            <img src="./images/example5.jpg" alt="Две Коробки" />
-            <h2>Проект Boxes</h2>
-            <p class="category-mark">Приложение</p>
+            <a href="" class="link">
+              <img
+                src="./images/example5.jpg"
+                alt="Две Коробки"
+                width="370px"
+                height="294px"
+              />
+              <h2 class="title">Проект Boxes</h2>
+              <p class="category-tag">Приложение</p>
+              <p class="description">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
           </li>
           <li>
-            <img src="./images/example6.jpg" alt="Монитор" />
-            <h2>Inspiration has no Borders</h2>
-            <p class="category-mark">Веб-сайт</p>
+            <a href="" class="link">
+              <img
+                src="./images/example6.jpg"
+                alt="Монитор"
+                width="370px"
+                height="294px"
+              />
+              <h2 class="title">Inspiration has no Borders</h2>
+              <p class="category-tag">Веб-сайт</p>
+              <p class="description">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
           </li>
           <li>
-            <img src="./images/example7.jpg" alt="Журнал" />
-            <h2>Издание Limited Edition</h2>
-            <p class="category-mark">Дизайн</p>
+            <a href="" class="link">
+              <img
+                src="./images/example7.jpg"
+                alt="Журнал"
+                width="370px"
+                height="294px"
+              />
+              <h2 class="title">Издание Limited Edition</h2>
+              <p class="category-tag">Дизайн</p>
+              <p class="description">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
           </li>
           <li>
-            <img src="./images/example8.jpg" alt="Лэйбл" />
-            <h2>Проект LAB</h2>
-            <p class="category-mark">Маркетинг</p>
+            <a href="" class="link">
+              <img
+                src="./images/example8.jpg"
+                alt="Лэйбл"
+                width="370px"
+                height="294px"
+              />
+              <h2 class="title">Проект LAB</h2>
+              <p class="category-tag">Маркетинг</p>
+              <p class="description">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
           </li>
           <li>
-            <img src="./images/example9.jpg" alt="Ноутбук на столе" />
-            <h2>Growing Business</h2>
-            <p class="category-mark">Приложение</p>
+            <a href="" class="link">
+              <img
+                src="./images/example9.jpg"
+                alt="Ноутбук на столе"
+                width="370px"
+                height="294px"
+              />
+              <h2 class="title">Growing Business</h2>
+              <p class="category-tag">Приложение</p>
+              <p class="description">
+                Технокряк это современная площадка распространения коронавируса.
+                Компании используют эту платформу для цифрового шпионажа и атак
+                на защищённые сервера конкурентов.
+              </p>
+            </a>
           </li>
         </ul>
       </section>
     </main>
 
     <!-- Футер -->
+
     <footer>
       <a href="./index.html" class="logo-foot"
         ><span class="blue">Web</span> Studio</a
@@ -100,12 +224,11 @@
         4й этаж офис 404
       </address>
       <address class="footer-contacts">
-        <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a
-        ><br />
+        <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
         <a href="tel:+3800961111111" class="link">+3800961111111</a>
       </address>
       <!-- Зазывающий подписаться список ссылок -->
-      <section class="footer-section">
+      <section class="footer-social">
         <b class="title">присоединяйтесь</b>
         <ul class="list">
           <li>
@@ -125,7 +248,7 @@
         </ul>
       </section>
       <!-- Секция зазывающая и помогающая сразу подписаться на рассылку -->
-      <section class="footer-section">
+      <section class="footer-social">
         <b class="title">Подпишитесь на рассылку</b>
         <!-- <textarea name="e-mail" id="e-mail-area" cols="30" rows="1"></textarea> -->
         <!-- Будущая кнопка -->
