Убирает "px" из размеров тега <img>

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
               <img
                 src="./images/img1.jpg"
                 alt="Ноутбук"
-                width="370px"
-                height="294px"
+                width="370"
+                height="294"
               />
               <h3 class="title">Десктопные приложения</h3>
             </a>
@@ -113,8 +113,8 @@
               <img
                 src="./images/img2.jpg"
                 alt="Смартфон"
-                width="370px"
-                height="294px"
+                width="370"
+                height="294"
               />
               <h3 class="title">Мобильные приложения</h3>
             </a>
@@ -124,8 +124,8 @@
               <img
                 src="./images/img3.jpg"
                 alt="Монитор"
-                width="370px"
-                height="294px"
+                width="370"
+                height="294"
               />
               <h3 class="title">Дизайнерские решения</h3>
             </a>
@@ -143,8 +143,8 @@
             <img
               src="./images/face1.jpg"
               alt="Лицо человека1"
-              width="270px"
-              height="260px"
+              width="270"
+              height="260"
             />
             <h3 class="name">Николай Кучеренко</h3>
             <p class="rank">Product Designer</p>
@@ -175,8 +175,8 @@
             <img
               src="./images/face2.jpg"
               alt="Лицо человека2"
-              width="270px"
-              height="260px"
+              width="270"
+              height="260"
             />
             <h3 class="name">Ольга Иванова</h3>
             <p class="rank">Frontend Developer</p>
@@ -207,8 +207,8 @@
             <img
               src="./images/face3.jpg"
               alt="Лицо человека3"
-              width="270px"
-              height="260px"
+              width="270"
+              height="260"
             />
             <h3 class="name">Андрей Шевченко</h3>
             <p class="rank">Marketing</p>
@@ -239,8 +239,8 @@
             <img
               src="./images/face4.jpg"
               alt="Лицо человека4"
-              width="270px"
-              height="260px"
+              width="270"
+              height="260"
             />
             <h3 class="name">Иван Николаев</h3>
             <p class="rank">UI Designer</p>
