--- a/portfolio.html
+++ b/portfolio.html
@@ -60,8 +60,8 @@
               <img
                 src="./images/example1.jpg"
                 alt="Ноутбук"
-                width="370px"
-                height="294px"
+                width="370"
+                height="294"
               />
               <h2 class="title">Технокряк</h2>
               <p class="category-tag">Веб-сайт</p>
@@ -77,8 +77,8 @@
               <img
                 src="./images/example2.jpg"
                 alt="Баскетбол"
-                width="370px"
-                height="294px"
+                width="370"
+                height="294"
               />
               <h2 class="title">Постер New Orlean vs Golden Star</h2>
               <p class="category-tag">Дизайн</p>
@@ -94,8 +94,8 @@
               <img
                 src="./images/example3.jpg"
                 alt="Ресторан Морской Кухни"
-                width="370px"
-                height="294px"
+                width="370"
+                height="294"
               />
               <h2 class="title">Ресторан Seafood</h2>
               <p class="category-tag">Приложение</p>
@@ -111,8 +111,8 @@
               <img
                 src="./images/example4.jpg"
                 alt="Наушники"
-                width="370px"
-                height="294px"
+                width="370"
+                height="294"
               />
               <h2 class="title">Проект Prime</h2>
               <p class="category-tag">Маркетинг</p>
@@ -128,8 +128,8 @@
               <img
                 src="./images/example5.jpg"
                 alt="Две Коробки"
-                width="370px"
-                height="294px"
+                width="370"
+                height="294"
               />
               <h2 class="title">Проект Boxes</h2>
               <p class="category-tag">Приложение</p>
@@ -145,8 +145,8 @@
               <img
                 src="./images/example6.jpg"
                 alt="Монитор"
-                width="370px"
-                height="294px"
+                width="370"
+                height="294"
               />
               <h2 class="title">Inspiration has no Borders</h2>
               <p class="category-tag">Веб-сайт</p>
@@ -162,8 +162,8 @@
               <img
                 src="./images/example7.jpg"
                 alt="Журнал"
-                width="370px"
-                height="294px"
+                width="370"
+                height="294"
               />
               <h2 class="title">Издание Limited Edition</h2>
               <p class="category-tag">Дизайн</p>
@@ -179,8 +179,8 @@
               <img
                 src="./images/example8.jpg"
                 alt="Лэйбл"
-                width="370px"
-                height="294px"
+                width="370"
+                height="294"
               />
               <h2 class="title">Проект LAB</h2>
               <p class="category-tag">Маркетинг</p>
@@ -196,8 +196,8 @@
               <img
                 src="./images/example9.jpg"
                 alt="Ноутбук на столе"
-                width="370px"
-                height="294px"
+                width="370"
+                height="294"
               />
               <h2 class="title">Growing Business</h2>
               <p class="category-tag">Приложение</p>
